--- a/css/large.css
+++ b/css/large.css
@@ -14,6 +14,7 @@
 		background-position: 10px -50px;
 		display: flex;
 		justify-content: center;
+		padding-bottom: 0;
 	}
 
 	.images{
@@ -25,10 +26,6 @@
 	.image{
 		width: 170px;
 
-	}
-
-	.about-us{
-		padding-top: 250px;
 	}
 
 	.collection {
