--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,12 @@ button{
     position: relative;
     margin-left: auto;
 }
+
+.side > img{
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+}
 .collection{
     padding-bottom: 100px;
 }
